# robotis-framework

./: README.md
joint_manager/: CMakeLists.txt  package.xml
joint_manager/config/: dxl_init.yaml  mirrax.robot  new_mirrax.robot  offset.yaml  robot.robot  test.robot
joint_manager/launch/: joint_manager.launch  joint_manager_light.launch
joint_manager/src/: joint_manager.cpp  joint_manager_light.cpp  test_write.py  torque_server.py
robotis_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_controller/include/robotis_controller/: robotis_controller.h  robotis_controller_light.h
robotis_controller/src/robotis_controller/: robotis_controller.cpp  robotis_controller_light.cpp
robotis_controller_msgs/: CMakeLists.txt
robotis_controller_msgs/msg/: SyncWriteMulti.msg  SyncWriteMultiFloat.msg
robotis_device/: CHANGELOG.rst
robotis_device/devices/dynamixel/: MX-64p2.device
robotis_device/include/robotis_device/: device.h  dynamixel.h  robot.h
robotis_device/src/robotis_device/: dynamixel.cpp  robot.cpp
test_manager/: CMakeLists.txt  package.xml
test_manager/config/: dxl_init.yaml  offset.yaml  test.robot
test_manager/launch/: test_manager.launch
test_manager/misc/: 99-u2d2.rules
test_manager/src/: test_manager.cpp  torque_server.py
