<package format="2">
  <name>robotis_controller</name>
  <version>0.2.6</version>
  <description>
    Modified robotis_controller package for control of robotis servos.
  </description>

  <maintainer email="wei.cheah@outlook.com">Wei Cheah</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_framework_common</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>

</package>