<package format="2">
  <name>test_manager</name>
  <version>0.0.1</version>
  <description>
    Spinning up dynamixel motors for ROS control with robotis_controller
  </description>

  <maintainer email="wei.cheah@outlook.com">Wei Cheah</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_device</depend>
  <depend>robotis_framework_common</depend>

</package>
